Fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-body{
+html, body{
 	font-family: 'Roboto', sans-serif;
-	margin: 0px;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 
 .circle{
